unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/SPARTADMS__Corporate_Document__c.object-meta.xml
<CustomObject>
    <description>Corporate Documents</description>
    <label>Corporate Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>