unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/Site_Location__c.field-meta.xml
<CustomField>
        <fullName>Site_Location__c</fullName>
        <label>Site Location</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>