unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Alphanumeric_Sequence__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Alphanumeric_Sequence__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>