unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Approved_Date_Time__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Approved_Date_Time__c</fullName>
        <description>Approver approved Date Time</description>
        <inlineHelpText>Approver approved Date Time</inlineHelpText>
        <label>Approved Date Time</label>
        <type>DateTime</type>
    </CustomField>