unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Approved_Document_Number__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Approved_Document_Number__c</fullName>
        <description>Approved Document Number</description>
        <inlineHelpText>Approved Document Number</inlineHelpText>
        <label>Approved Document Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>