unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Approver_CollaborationId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Approver_CollaborationId__c</fullName>
        <description>Approver CollaborationId</description>
        <inlineHelpText>Approver CollaborationId</inlineHelpText>
        <label>Approver CollaborationId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>