unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Approver_GroupId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Approver_GroupId__c</fullName>
        <description>Approver GroupId</description>
        <inlineHelpText>Approver GroupId</inlineHelpText>
        <label>Approver GroupId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>