unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Author_Collaboration_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Author_Collaboration_Id__c</fullName>
        <description>Author Collaboration Id</description>
        <inlineHelpText>Author Collaboration Id</inlineHelpText>
        <label>Author Collaboration Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>