unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Box_Document_Etag__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Box_Document_Etag__c</fullName>
        <description>Document ETag</description>
        <inlineHelpText>Document ETag</inlineHelpText>
        <label>Document ETag</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>