unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Box_Document_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Box_Document_Id__c</fullName>
        <description>Document Id</description>
        <inlineHelpText>Document Id</inlineHelpText>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>