unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Box_Effective_Document_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Box_Effective_Document_Id__c</fullName>
        <description>Box Effective Document Id</description>
        <inlineHelpText>Box Effective Document Id</inlineHelpText>
        <label>Box Effective Document Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>