unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Box_Effective_FolderId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Box_Effective_FolderId__c</fullName>
        <description>Effective FolderId</description>
        <inlineHelpText>Effective FolderId</inlineHelpText>
        <label>Effective FolderId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>