unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Box_Folder_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Box_Folder_Id__c</fullName>
        <description>Folder Id</description>
        <inlineHelpText>Folder Id</inlineHelpText>
        <label>Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>