unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Checkin_Status__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Checkin_Status__c</fullName>
        <label>Checkin Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checked In</fullName>
                </value>
                <value>
                    <fullName>Checked Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>