unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__DMS_Print_Permission_Json__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__DMS_Print_Permission_Json__c</fullName>
        <description>DMS Print Permission Json</description>
        <inlineHelpText>DMS Print Permission Json</inlineHelpText>
        <label>DMS Print Permission Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>