unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Auto_Number__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Auto_Number__c</fullName>
        <description>Document Auto Number</description>
        <displayFormat>{00000}</displayFormat>
        <inlineHelpText>Document Auto Number</inlineHelpText>
        <label>Document Auto Number</label>
        <type>AutoNumber</type>
    </CustomField>