unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Department__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Department__c</fullName>
        <label>Document Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Quality (Q)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>