unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Minor_Version__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Minor_Version__c</fullName>
        <description>Used to hold modifications to the document</description>
        <inlineHelpText>Used to hold modifications to the document</inlineHelpText>
        <label>Document Minor Version</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>