unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Number__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Number__c</fullName>
        <formula>IF( $Setup.SPARTADMS__DMS_App_Setting__c.SPARTADMS__Enable_Document_Type_Auto_Numbering__c , SPARTADMS__Document_Auto_Number__c ,(SUBSTITUTE(RIGHT( TEXT(SPARTADMS__Document_Department__c) , LEN(TEXT(SPARTADMS__Document_Department__c))- FIND("(",TEXT(SPARTADMS__Document_Department__c))),')','')) &amp; "-" &amp; SPARTADMS__Document_Auto_Number__c   &amp; "-" &amp; (SUBSTITUTE(RIGHT( TEXT(SPARTADMS__Document_Type__c) , LEN(TEXT(SPARTADMS__Document_Type__c))- FIND("(",TEXT(SPARTADMS__Document_Type__c))),')','')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </CustomField>