unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Number_Major__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Number_Major__c</fullName>
        <description>Stores Document Major Version</description>
        <inlineHelpText>Stores Document Major Version</inlineHelpText>
        <label>Document Number Major</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>