unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Revision_At_Approval__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Revision_At_Approval__c</fullName>
        <defaultValue>1</defaultValue>
        <description>It is used to set the document version value when the document is approved for the first time</description>
        <inlineHelpText>It is used to set the document version value when the document is approved for the first time</inlineHelpText>
        <label>Document Revision At Effective</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>