unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Sequence_Number__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Sequence_Number__c</fullName>
        <label>Document Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>