unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Status__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Status__c</fullName>
        <description>Document Status</description>
        <inlineHelpText>Document Status</inlineHelpText>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRAFT</fullName>
                    <default>true</default>
                    <label>DRAFT</label>
                </value>
                <value>
                    <fullName>REVIEWED</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>EFFECTIVE</fullName>
                </value>
                <value>
                    <fullName>OBSOLETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>