unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Type__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Form (FRM)</fullName>
                </value>
                <value>
                    <fullName>Record (RCD)</fullName>
                </value>
                <value>
                    <fullName>Template (TPT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>