unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Version__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Version__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Document Version</description>
        <inlineHelpText>Document Version</inlineHelpText>
        <label>Document Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>