unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Document_Version_At_Approval__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Version_At_Approval__c</fullName>
        <description>It is backend field to store the version info when the document is approved</description>
        <inlineHelpText>It is backend field to store the version info when the document is approved</inlineHelpText>
        <label>Document Version At Approval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>