unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Draft_Version__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Draft_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This will be increased 0.1 whenever a negative action takes place</description>
        <inlineHelpText>Draft Version</inlineHelpText>
        <label>Draft Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>