unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Effective_Datetime__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Effective_Datetime__c</fullName>
        <description>Approved Datetime to be (calculated as per the custom settings # of days of approved happens)</description>
        <formula>IF(ISNULL(SPARTADMS__Approved_Date_Time__c),null, IF(ISNULL(SPARTADMS__Document_Auto_Effective_Days__c), SPARTADMS__Approved_Date_Time__c + $Setup.SPARTADMS__DMS_App_Setting__c.SPARTADMS__Document_Auto_Effective__c, SPARTADMS__Approved_Date_Time__c + SPARTADMS__Document_Auto_Effective_Days__c))</formula>
        <inlineHelpText>Effective Datetime to be (calculated as per the custom settings # of days of approved happens)</inlineHelpText>
        <label>Effective Datetime (Formula)</label>
        <type>DateTime</type>
    </CustomField>