unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Effective_DT__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Effective_DT__c</fullName>
        <description>Effective Datetime</description>
        <inlineHelpText>Effective Datetime</inlineHelpText>
        <label>Effective Datetime</label>
        <type>DateTime</type>
    </CustomField>