unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Enable_Controlled_Printing__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Enable_Controlled_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Controlled Printing?</description>
        <inlineHelpText>Enable Controlled Printing?</inlineHelpText>
        <label>Enable Controlled Printing?</label>
        <type>Checkbox</type>
    </CustomField>