unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__FeedItemId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__FeedItemId__c</fullName>
        <description>FeedItemId</description>
        <inlineHelpText>FeedItemId</inlineHelpText>
        <label>FeedItemId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>