unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Is_File_Uploaded__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Is_File_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the file is uploaded to Box or not</description>
        <inlineHelpText>Specifies whether the file is uploaded to Box or not</inlineHelpText>
        <label>Is File Uploaded</label>
        <type>Checkbox</type>
    </CustomField>