unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Is_Justification_Required__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Is_Justification_Required__c</fullName>
        <formula>AND(ISPICKVAL(SPARTADMS__Document_Status__c, 'DRAFT') , ISPICKVAL(SPARTADMS__Version_Status__c , 'Working'),$Setup.SPARTADMS__DMS_App_Setting__c.SPARTADMS__Enable_Review_Justification__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Justification Required</label>
        <type>Checkbox</type>
    </CustomField>