unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Is_Locked__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Is_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the document is locked or not</description>
        <inlineHelpText>To check whether the document is locked or not</inlineHelpText>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </CustomField>