unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Last_Reviewed_FolderId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Last_Reviewed_FolderId__c</fullName>
        <description>Used to hold the box folder Id of last reviewed document when the last reviewer completes review</description>
        <inlineHelpText>Used to hold the box folder Id of last reviewed document when the last reviewer completes review</inlineHelpText>
        <label>Last Reviewed FolderId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>