unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__LastReviewedDocumentId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__LastReviewedDocumentId__c</fullName>
        <description>Used to hold the file version of box document when it reviewed by the last reviewer</description>
        <inlineHelpText>Used to hold the file version of box document when it reviewed by the last reviewer</inlineHelpText>
        <label>Last Reviewed DocumentId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>