unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Latest_file_name__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Latest_file_name__c</fullName>
        <description>Store the latest uploaded file name</description>
        <inlineHelpText>Store the latest uploaded file name</inlineHelpText>
        <label>Latest file name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>