unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Locked_By__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Locked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document locked by user</description>
        <inlineHelpText>Document locked by user</inlineHelpText>
        <label>Locked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Locked_By</relationshipName>
        <type>Lookup</type>
    </CustomField>