unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Locked_Datetime__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Locked_Datetime__c</fullName>
        <description>Document Locked Datetime</description>
        <inlineHelpText>Document Locked Datetime</inlineHelpText>
        <label>Locked Datetime</label>
        <type>DateTime</type>
    </CustomField>