unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__New_Feed_Item_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__New_Feed_Item_Id__c</fullName>
        <description>New Feed Item Id</description>
        <inlineHelpText>New Feed Item Id</inlineHelpText>
        <label>New Feed Item Id</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>