unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Periodic_Review_Cycle_months__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Periodic_Review_Cycle_months__c</fullName>
        <label>Periodic Review Cycle (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>