unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Periodic_Review_Notification_Date__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Periodic_Review_Notification_Date__c</fullName>
        <description>Periodic Review Notification Date</description>
        <inlineHelpText>Periodic Review Notification Date</inlineHelpText>
        <label>Periodic Review Notification Date</label>
        <type>Date</type>
    </CustomField>