unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Periodic_Review_Notification_days__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Periodic_Review_Notification_days__c</fullName>
        <label>Periodic Review Notification (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>