unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Quality_Event_Reference__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Quality_Event_Reference__c</fullName>
        <description>Quality Event Reference</description>
        <inlineHelpText>Quality Event Reference Number</inlineHelpText>
        <label>Quality Event Reference</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>