unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Related_Document__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Related_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Document</description>
        <inlineHelpText>Parent Document</inlineHelpText>
        <label>Parent Document</label>
        <referenceTo>SPARTADMS__Corporate_Document__c</referenceTo>
        <relationshipLabel>Related Documents</relationshipLabel>
        <relationshipName>Corporate_Documents</relationshipName>
        <type>Lookup</type>
    </CustomField>