unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Related_Quality_Event__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Related_Quality_Event__c</fullName>
        <description>Related Quality Event</description>
        <inlineHelpText>Related Quality Event</inlineHelpText>
        <label>Related Quality Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAPA</fullName>
                </value>
                <value>
                    <fullName>Change Control</fullName>
                </value>
                <value>
                    <fullName>Deviation</fullName>
                </value>
                <value>
                    <fullName>Non Conformance</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>OOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>