unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Request_Date__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Request_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>System populated. Date that the initial document or document request is started.</description>
        <inlineHelpText>Date that the initial document or document request is started.</inlineHelpText>
        <label>Request Date</label>
        <type>Date</type>
    </CustomField>