unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Requires_Training__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Requires_Training__c</fullName>
        <description>Requires Training</description>
        <inlineHelpText>Requires Training</inlineHelpText>
        <label>Requires Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>