unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Reviewed_Datetime__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Reviewed_Datetime__c</fullName>
        <description>Reviewed Datetime</description>
        <inlineHelpText>Reviewed Datetime</inlineHelpText>
        <label>Reviewed Datetime</label>
        <type>DateTime</type>
    </CustomField>