unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Reviewer_CollaborationId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Reviewer_CollaborationId__c</fullName>
        <description>Reviewer CollaborationId</description>
        <inlineHelpText>Reviewer CollaborationId</inlineHelpText>
        <label>Reviewer CollaborationId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>