unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Reviewer_GroupId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Reviewer_GroupId__c</fullName>
        <description>Reviewer GroupId</description>
        <inlineHelpText>Reviewer GroupId</inlineHelpText>
        <label>Reviewer GroupId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>