unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Submission_Type__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Submission_Type__c</fullName>
        <description>The corporate document record submission type</description>
        <inlineHelpText>The corporate document record submission type</inlineHelpText>
        <label>Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Effective Submission</fullName>
                </value>
                <value>
                    <fullName>Checkout Submission</fullName>
                </value>
                <value>
                    <fullName>Obsolete Submission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>