unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__Template_Type__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Template_Type__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Form (FRM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>