unpackaged/main/default/objects/SPARTADMS__Corporate_Document__c/fields/SPARTADMS__To_Be_Retained_Until__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__To_Be_Retained_Until__c</fullName>
        <label>To Be Retained Until</label>
        <type>Date</type>
    </CustomField>